--- a/testApp/src/Resources/css/main.css
+++ b/testApp/src/Resources/css/main.css
@@ -47,3 +47,10 @@ h1{
 .text-green{
 	color:rgb(101,214,0);
 }
+
+.file-delete{
+	color: rgba(239,54,0,0.63);
+	position: absolute;
+	right: 20px;
+	top: 20px;
+}
